ci: use xtasks in node, fix xtasks and core ci

--- a/.github/workflows/junction-node-ci.yml
+++ b/.github/workflows/junction-node-ci.yml
@@ -37,43 +37,8 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - name: check
-        run: cargo check -p junction-node
-  clippy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+        run: cargo xtask node build
 
-      - name: "Install Rust @ ${{ env.rust_stable }}"
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: ${{ env.rust_stable }}
-
-      - uses: Swatinem/rust-cache@v2
-
-      - name: clippy
-        run: cargo xtask node lint
-  rustfmt:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: "Install Rust @ ${{ env.rust_stable }}"
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: ${{ env.rust_stable }}
-
-      - uses: Swatinem/rust-cache@v2
-
-      - name: fmt
-        run: |
-          if ! rustfmt --check --edition 2021 $(git ls-files 'junction-node/*.rs'); then
-            echo "rustfmt found un-formatted files" >&2
-            exit 1
-          fi
-
-  # Node CI steps
-  #
-  # these lean on xtask tasks so they're similar to what you'd run locally
   test-node:
     runs-on: ubuntu-latest
     steps:
@@ -99,17 +64,8 @@ jobs:
         run: cargo xtask node lint
 
       - name: check for uncommitted changes
-        run: |
-          if [[ -n $(git status --porcelain) ]]; then
-              echo "Found uncomitted changes:"
-              git diff
-              exit 1
-          fi
-
-      - name: run rust tests
-        run: cargo test -p junction-node
+        run: cargo xtask check-diffs
 
       # TODO: add some node tests
-      #
       # - name: run node tests
       #   run: cargo xtask node test
