--- a/.github/workflows/junction-ci.yml
+++ b/.github/workflows/junction-ci.yml
@@ -58,7 +58,7 @@ jobs:
           toolchain: ${{ env.rust_stable }}
       - uses: Swatinem/rust-cache@v2
       - name: clippy
-        run: cargo xtask core lint
+        run: cargo xtask core clippy
 
   fmt:
     runs-on: ubuntu-latest
