--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,13 @@ resolver = "2"
 [workspace.package]
 version = "0.2.3"
 edition = "2021"
-rust-version = "1.80"
 homepage = "https://junctionlabs.io"
 repository = "https://github.com/junction-labs/junction-client"
 license = "Apache-2.0"
+
+# kube's msrv keeps climbing. we're picking this up through the transitive dep
+# on `home`. once we drop the direct kube dependency, try downgrading.
+rust-version = "1.81"
 
 [workspace.dependencies]
 arc-swap = "1.7"
