--- a/crates/junction-api/Cargo.toml
+++ b/crates/junction-api/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
 name = "junction-api"
-version = "0.2.1"
 edition = "2021"
 description = """
 Common API Types for Junction - an xDS dynamically-configurable API load-balancer library.
 """
-readme = "../README.md"
+version.workspace = true
 homepage.workspace = true
 repository.workspace = true
 license.workspace = true
