--- a/.github/workflows/release-node.yaml
+++ b/.github/workflows/release-node.yaml
@@ -31,6 +31,11 @@ jobs:
         with:
           ref: ${{ inputs.sha }}
 
+      - name: "Install Rust @ ${{ env.rust_stable }}"
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: ${{ env.rust_stable }}
+
       - name: Install Node
         uses: actions/setup-node@v4
         with:
