--- a/.github/workflows/release-node.yaml
+++ b/.github/workflows/release-node.yaml
@@ -10,6 +10,14 @@ on:
         description: Dry run. Defaults to true. Won't release to NPM by default.
         type: boolean
         default: true
+      include-docs:
+        description: Publish docs to the Junction Labs website
+        type: boolean
+        default: true
+      include-npm:
+        description: Publish packages to NPM
+        type: boolean
+        default: true
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -132,6 +140,7 @@ jobs:
   npm-publish:
     needs: [ts-package, native-packages]
     runs-on: ubuntu-latest
+    if: ${{ inputs.include-npm }}
 
     environment:
       name: release-node
@@ -168,6 +177,7 @@ jobs:
   publish-to-github:
     needs: [npm-publish]
     runs-on: ubuntu-latest
+    if: ${{ inputs.include-docs }}
 
     #need this here for the docs publishing step to work
     permissions:
@@ -188,5 +198,4 @@ jobs:
         uses: peter-evans/repository-dispatch@v3
         with:
           event-type: node-release
-          client-payload: |
-            "${{ steps.version.outputs.payload }}"
+          client-payload: "${{ steps.version.outputs.payload }}"
