ci: docs-only publishing for node should run if npm is skipped

--- a/.github/workflows/release-node.yaml
+++ b/.github/workflows/release-node.yaml
@@ -175,7 +175,7 @@ jobs:
           done
 
   publish-to-github:
-    needs: [npm-publish]
+    needs: [ts-package]
     runs-on: ubuntu-latest
     if: ${{ inputs.include-docs }}
 
