--- a/.github/workflows/docs-reference.yml
+++ b/.github/workflows/docs-reference.yml
@@ -59,6 +59,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - name: node reference docs
+        if: ${{ needs.what.outputs.dev || needs.what.outputs.node }}
         uses: ./.github/actions/node-reference-docs
         with:
           node-version: 22
@@ -67,6 +68,7 @@ jobs:
           build-stable: ${{ needs.what.outputs.node }}
 
       - name: Python reference docs
+        if: ${{ needs.what.outputs.dev || needs.what.outputs.python }}
         uses: ./.github/actions/python-reference-docs
         with:
           python-version: 3.12
@@ -77,12 +79,14 @@ jobs:
       # Rustdoc only deploys to dev, since the stable versions are all hosted on
       # docs.rs when we release.
       #
-      # TODO: move this into a composite action?
+      # TODO: move this into a composite action so we don't have to `if` every
+      # step separately.
       - name: Build Rust documentation
+        if: ${{ needs.what.outputs.dev }}
         run: cargo xtask core doc
 
       - name: Deploy Rust dev docs
-        if: github.event_name == 'push' && github.ref_name == 'main'
+        if: ${{ needs.what.outputs.dev }}
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: target/doc/
@@ -90,4 +94,5 @@ jobs:
           single-commit: true
 
       - name: Clean up rust dev docs artifacts
+        if: ${{ needs.what.outputs.dev }}
         run: rm -rf target/doc
