clippy: add rust-version to all crates

--- a/crates/junction-core/Cargo.toml
+++ b/crates/junction-core/Cargo.toml
@@ -14,6 +14,8 @@ categories = [
     "web-programming::http-client",
 ]
 
+rust-version.workspace = true
+
 [dependencies]
 arc-swap = { workspace = true }
 bytes = { workspace = true }
