--- a/crates/junction-api-gen/Cargo.toml
+++ b/crates/junction-api-gen/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 homepage.workspace = true
 repository.workspace = true
 license.workspace = true
+rust-version.workspace = true
 description = """
 cross-language API generation for Junction
 """
