--- a/crates/junction-typeinfo-derive/Cargo.toml
+++ b/crates/junction-typeinfo-derive/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 homepage.workspace = true
 repository.workspace = true
 license.workspace = true
+rust-version.workspace = true
 description = """
 TypeInfo derive macro
 """
