--- a/crates/junction-typeinfo/Cargo.toml
+++ b/crates/junction-typeinfo/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 homepage.workspace = true
 repository.workspace = true
 license.workspace = true
+rust-version.workspace = true
 description = """
 reflection for junction API generation
 """
