--- a/.github/workflows/smoke-test.yml
+++ b/.github/workflows/smoke-test.yml
@@ -11,6 +11,8 @@ on:
   push:
     branches: ["main"]
     paths:
+      - "Cargo.toml"
+      - "Cargo.lock"
       - "junction-python/**"
       - "crates/**"
       - ".github/workflows/smoke-test.yml"
@@ -18,6 +20,8 @@ on:
   pull_request:
     branches: ["main"]
     paths:
+      - "Cargo.toml"
+      - "Cargo.lock"
       - "junction-python/**"
       - "crates/**"
       - ".github/workflows/smoke-test.yml"
